--- a/index.html
+++ b/index.html
@@ -1,108 +1,206 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
+  <!-- Meta Pixel Code -->
+  <script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+  fbq('init', '454414609931215');
+  fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=454414609931215&ev=PageView&noscript=1"/></noscript>
+  <!-- End Meta Pixel Code -->
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SHOP Smarty | Smart Shopping Made Simple</title>
+  <title>SHOP Smarty | Direct Sale</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 
   <style>
-    body { background: #fafafa; }
-    .card { transition: all 0.3s ease; }
-    .card:hover { transform: translateY(-4px); box-shadow: 0 10px 25px rgba(0,0,0,0.1); }
-    .bottom-nav {
-      position: fixed; bottom: 0; left: 0; right: 0;
-      background: #ef4444; display: flex; justify-content: space-around;
-      padding: 10px 0; color: #fff; z-index: 50;
-    }
-    .active { color: #fff; font-weight: 600; }
+    .glow:hover { box-shadow: 0 8px 25px rgba(99,102,241,0.3); transform: translateY(-5px);}
+    .fade-in { animation: fadeIn 1s ease-in-out;}
+    @keyframes fadeIn {from {opacity:0;transform:translateY(10px);}to {opacity:1;transform:translateY(0);}}
+    .typing::after { content:'|'; animation:blink 0.8s infinite;}
+    @keyframes blink {0%,50%,100%{opacity:1;}25%,75%{opacity:0;}}
   </style>
 
   <script>
-    function orderNow(productName, price){
+    function orderNow(productName) {
       const phone = '01750056652';
-      const message = encodeURIComponent(`Hi! আমি এই পণ্যটি অর্ডার করতে চাই: ${productName} (মূল্য: ${price}৳)`);
+      const message = encodeURIComponent(`Hello! I want to order the product: ${productName} (Price: 2500tk)`);
       window.open(`https://wa.me/88${phone}?text=${message}`, '_blank');
     }
+
+    document.addEventListener("DOMContentLoaded", function() {
+      const textElement = document.getElementById("typing-text");
+      const phrases = ["Best Offers", "Fast Delivery", "Direct Sale", "Shop Smartly with SHOP Smarty"];
+      let i=0,j=0,deleting=false;
+      function type(){
+        let current=phrases[i];
+        if(!deleting){
+          textElement.textContent=current.substring(0,j++);
+          if(j>current.length+10) deleting=true;
+        }else{
+          textElement.textContent=current.substring(0,j--);
+          if(j===0){ deleting=false;i=(i+1)%phrases.length;}
+        }
+        setTimeout(type,deleting?60:100);
+      }
+      type();
+    });
   </script>
 </head>
 
-<body class="font-sans text-gray-800">
+<body class="bg-gray-50 font-sans">
 
   <!-- HEADER -->
-  <header class="bg-red-500 text-white py-3 px-5 flex justify-between items-center shadow-md">
-    <h1 class="text-xl font-bold">🛍 SHOP Smarty</h1>
-    <a href="https://wa.me/8801750056652" target="_blank" class="bg-green-500 px-4 py-1 rounded-full text-sm font-semibold">WhatsApp</a>
+  <header class="bg-gradient-to-r from-indigo-700 via-purple-700 to-pink-600 text-white py-4 shadow-lg">
+    <div class="max-w-6xl mx-auto flex items-center justify-between px-4">
+      <div class="flex items-center space-x-3">
+        <img src="logo.png" alt="SHOP Smarty Logo" class="w-12 h-12 rounded-full border-2 border-white shadow-md">
+        <div>
+          <h1 class="text-2xl font-bold tracking-wide">SHOP Smarty</h1>
+          <p class="text-sm opacity-90">Exclusive Combo Offers | Direct Order via WhatsApp</p>
+        </div>
+      </div>
+      <a href="https://wa.me/8801750056652" target="_blank" class="hidden sm:inline-block bg-green-500 hover:bg-green-600 text-white px-5 py-2 rounded-full font-semibold transition">
+        💬 Chat Now
+      </a>
+    </div>
   </header>
 
   <!-- HERO -->
-  <section class="bg-gradient-to-r from-red-500 via-pink-500 to-orange-400 text-white text-center py-10 px-6">
-    <h2 class="text-3xl font-bold mb-2">Trending Combos & Gadgets</h2>
-    <p class="text-sm opacity-90 mb-5">Direct order • Fast delivery • Exclusive prices</p>
-    <a href="#products" class="bg-white text-red-600 px-6 py-2 rounded-full font-semibold shadow hover:scale-105 transition">Shop Now</a>
+  <section class="relative bg-gray-900 text-white">
+    <img src="hero-banner.jpg" alt="Hero Banner" class="w-full h-96 object-cover opacity-70">
+    <div class="absolute inset-0 bg-gradient-to-r from-indigo-800 via-purple-700 to-transparent opacity-80"></div>
+    <div class="absolute inset-0 flex flex-col items-center justify-center text-center px-6">
+      <h2 class="text-4xl md:text-5xl font-extrabold mb-3 drop-shadow-lg">সেরা দামে, স্মার্ট শপিং — নতুন ধারা এখন SHOP Smarty তে!</h2>
+      <p id="typing-text" class="typing text-lg md:text-xl mb-6 opacity-90 h-8"></p>
+      <a href="https://wa.me/8801750056652" target="_blank" class="bg-green-500 hover:bg-green-600 text-white font-semibold px-8 py-3 rounded-full shadow-lg transform hover:scale-105 transition">
+        🛒 Shop Now on WhatsApp
+      </a>
+    </div>
   </section>
 
-  <!-- PRODUCT GRID -->
-  <main id="products" class="px-4 py-10 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 max-w-6xl mx-auto">
+  <!-- PRODUCT SECTIONS -->
+  <main class="max-w-6xl mx-auto py-12 px-4 space-y-16">
 
-    <!-- Product Card -->
-    <div class="card bg-white rounded-2xl overflow-hidden shadow-sm">
-      <img src="product1.jpg" alt="Formal Combo Shirt" class="w-full h-52 object-cover">
-      <div class="p-4">
-        <h3 class="font-semibold text-lg mb-1">Formal Combo Shirt</h3>
-        <p class="text-gray-500 text-sm mb-3">Perfect office wear combo</p>
-        <div class="flex items-center justify-between">
-          <span class="text-red-600 font-bold">৳2500</span>
-          <button onclick="orderNow('Formal Combo Shirt', 2500)" class="bg-green-500 text-white px-3 py-1 rounded-full text-sm">Order</button>
+    <!-- CLOTHING SECTION -->
+    <section>
+      <h2 class="text-3xl font-bold mb-6 text-gray-800 border-l-4 border-indigo-600 pl-3">👕 Clothing Collection</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+        <div class="bg-white rounded-2xl shadow-lg overflow-hidden glow fade-in">
+          <img src="product1.jpg" class="w-full h-56 object-cover">
+          <div class="p-5 text-center">
+            <h3 class="text-lg font-semibold mb-2">Formal Combo - Slim Fit</h3>
+            <p class="text-gray-700 mb-4">Price: <span class="font-bold text-indigo-600">2500৳</span></p>
+            <button onclick="orderNow('Formal Combo - Slim Fit')" class="bg-green-500 hover:bg-green-600 text-white px-5 py-2 rounded-full shadow-md transition">
+              Order via WhatsApp
+            </button>
+          </div>
+        </div>
+
+        <div class="bg-white rounded-2xl shadow-lg overflow-hidden glow fade-in">
+          <img src="product2.jpg" class="w-full h-56 object-cover">
+          <div class="p-5 text-center">
+            <h3 class="text-lg font-semibold mb-2">Formal Combo - Classic</h3>
+            <p class="text-gray-700 mb-4">Price: <span class="font-bold text-indigo-600">2500৳</span></p>
+            <button onclick="orderNow('Formal Combo - Classic')" class="bg-green-500 hover:bg-green-600 text-white px-5 py-2 rounded-full shadow-md transition">
+              Order via WhatsApp
+            </button>
+          </div>
         </div>
       </div>
-    </div>
+    </section>
 
-    <div class="card bg-white rounded-2xl overflow-hidden shadow-sm">
-      <img src="gadget1.jpg" alt="Smart Watch Pro" class="w-full h-52 object-cover">
-      <div class="p-4">
-        <h3 class="font-semibold text-lg mb-1">Smart Watch Pro</h3>
-        <p class="text-gray-500 text-sm mb-3">Fitness & Notifications in style</p>
-        <div class="flex items-center justify-between">
-          <span class="text-red-600 font-bold">৳2500</span>
-          <button onclick="orderNow('Smart Watch Pro', 2500)" class="bg-green-500 text-white px-3 py-1 rounded-full text-sm">Order</button>
+    <!-- GADGETS SECTION -->
+    <section>
+      <h2 class="text-3xl font-bold mb-6 text-gray-800 border-l-4 border-pink-600 pl-3">🔌 Gadgets & Accessories</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+        <div class="bg-white rounded-2xl shadow-lg overflow-hidden glow fade-in">
+          <img src="gadget1.jpg" class="w-full h-56 object-cover">
+          <div class="p-5 text-center">
+            <h3 class="text-lg font-semibold mb-2">Smart Watch Pro</h3>
+            <p class="text-gray-700 mb-4">Price: <span class="font-bold text-indigo-600">2500৳</span></p>
+            <button onclick="orderNow('Smart Watch Pro')" class="bg-green-500 hover:bg-green-600 text-white px-5 py-2 rounded-full shadow-md transition">
+              Order via WhatsApp
+            </button>
+          </div>
+        </div>
+        <div class="bg-white rounded-2xl shadow-lg overflow-hidden glow fade-in">
+          <img src="gadget2.jpg" class="w-full h-56 object-cover">
+          <div class="p-5 text-center">
+            <h3 class="text-lg font-semibold mb-2">Wireless Earbuds</h3>
+            <p class="text-gray-700 mb-4">Price: <span class="font-bold text-indigo-600">2500৳</span></p>
+            <button onclick="orderNow('Wireless Earbuds')" class="bg-green-500 hover:bg-green-600 text-white px-5 py-2 rounded-full shadow-md transition">
+              Order via WhatsApp
+            </button>
+          </div>
         </div>
       </div>
-    </div>
+    </section>
 
-    <div class="card bg-white rounded-2xl overflow-hidden shadow-sm">
-      <img src="product2.jpg" alt="Classic Combo Pack" class="w-full h-52 object-cover">
-      <div class="p-4">
-        <h3 class="font-semibold text-lg mb-1">Classic Combo Pack</h3>
-        <p class="text-gray-500 text-sm mb-3">Smart fit, casual vibe</p>
-        <div class="flex items-center justify-between">
-          <span class="text-red-600 font-bold">৳2500</span>
-          <button onclick="orderNow('Classic Combo Pack', 2500)" class="bg-green-500 text-white px-3 py-1 rounded-full text-sm">Order</button>
+    <!-- TRENDING SECTION -->
+    <section>
+      <h2 class="text-3xl font-bold mb-6 text-gray-800 border-l-4 border-yellow-500 pl-3">🔥 Trending Now</h2>
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-8">
+        <div class="bg-white rounded-2xl shadow-lg overflow-hidden glow fade-in">
+          <img src="trend1.jpg" class="w-full h-56 object-cover">
+          <div class="p-5 text-center">
+            <h3 class="text-lg font-semibold mb-2">Classic Analog Watch</h3>
+            <p class="text-gray-700 mb-4">Price: <span class="font-bold text-indigo-600">2500৳</span></p>
+            <button onclick="orderNow('Classic Analog Watch')" class="bg-green-500 hover:bg-green-600 text-white px-5 py-2 rounded-full shadow-md transition">
+              Order via WhatsApp
+            </button>
+          </div>
         </div>
       </div>
-    </div>
+    </section>
+
+    <!-- NEWS SECTION -->
+    <section class="bg-white rounded-2xl shadow-lg p-8 fade-in">
+      <h2 class="text-3xl font-bold mb-4 text-gray-800 border-l-4 border-green-600 pl-3">📰 Latest News & Updates</h2>
+      <ul class="space-y-3">
+        <li class="border-b pb-2">
+          <h3 class="font-semibold text-lg text-gray-800">🎉 নতুন কালেকশন এসেছে – Formal Combo 2025 Edition!</h3>
+          <p class="text-sm text-gray-600">অর্ডার করতে এখনই ক্লিক করুন বা WhatsApp করুন।</p>
+        </li>
+        <li class="border-b pb-2">
+          <h3 class="font-semibold text-lg text-gray-800">⚡ ফ্রি ডেলিভারি অফার চলছে – সীমিত সময়ের জন্য!</h3>
+          <p class="text-sm text-gray-600">ঢাকা সিটির মধ্যে ফ্রি ডেলিভারি, আজই অর্ডার করুন।</p>
+        </li>
+        <li>
+          <h3 class="font-semibold text-lg text-gray-800">🛍 নতুন গ্যাজেট কালেকশন যুক্ত হয়েছে!</h3>
+          <p class="text-sm text-gray-600">স্মার্টওয়াচ, ইয়ারবাড এবং আরও অনেক কিছু।</p>
+        </li>
+      </ul>
+    </section>
 
   </main>
 
-  <!-- SUCCESS / OFFER SECTION -->
-  <section class="bg-green-50 border-t border-green-200 py-6 text-center">
-    <h3 class="text-green-700 font-bold text-xl mb-2">✅ Payment Successful!</h3>
-    <p class="text-gray-600 text-sm">All orders are confirmed instantly via WhatsApp. Thank you for choosing SHOP Smarty.</p>
-  </section>
-
-  <!-- FOOTER -->
-  <footer class="bg-gray-900 text-gray-300 text-center py-5 mt-10">
-    <p>📞 01750056652 | 🌐 <a href="https://www.shopsmartify.store" class="text-indigo-400 hover:underline">www.shopsmartify.store</a></p>
-    <p class="text-sm mt-1">© 2025 SHOP Smarty | Smartify Bangladesh</p>
-  </footer>
-
-  <!-- BOTTOM NAVIGATION -->
-  <div class="bottom-nav">
-    <a href="#" class="active">🏠</a>
-    <a href="#products">🛍️</a>
-    <a href="https://wa.me/8801750056652" target="_blank">💬</a>
-    <a href="https://www.shopsmartify.store" target="_blank">⚙️</a>
+  <!-- FLOATING WHATSAPP -->
+  <a href="https://wa.me/8801750056652" target="_blank" class="fixed bottom-6 right-6 bg-green-500 hover:bg-green-600 text-white rounded-full p-4 shadow-lg transform hover:scale-110 transition">
+    💬
+  </a>
+  <div class="text-center mt-6">
+    <a href="https://m.me/61572271088387" target="_blank" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 text-sm rounded-full shadow">
+      💬 Message Us On FB
+    </a>
   </div>
 
+  <!-- FOOTER -->
+  <footer class="text-center py-6 bg-gray-900 text-gray-300 mt-10">
+    <p>📞 Contact: 01750056652 | 🌐 
+      <a href="https://www.shopsmartify.store" class="text-indigo-400 hover:underline">www.shopsmartify.store</a>
+    </p>
+    <p class="text-sm mt-2">© 2025 SHOP Smarty. All rights reserved.</p>
+  </footer>
 </body>
 </html>
